--- a/vignettes/MetaNeighbor.Rmd
+++ b/vignettes/MetaNeighbor.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "MetaNeighbor : a method to rapidly assess cell type identity using both functional and random gene sets"
-author: "Megan Crow, Sara Ballouz, Manthan Shah, Jesse Gillis"
+author: "Megan Crow, Stephan Fischer, Sara Ballouz, Manthan Shah, Jesse Gillis"
 date: '`r Sys.Date()`'
 output:
   pdf_document:
@@ -345,9 +345,9 @@ type labels for each unique grouping (see Part 1).
 
 ## Part 3: low-memory version of MetaNeighbor for large datasets
 
-MetaNeighbor's voting algorithm relies on a cell-cell correlation network. This procedure becomes very memory-intensive and time consuming when it is applied to datasets that contain a large number of samples. We propose an approximative version of MetaNeighbor that does not explicitly compute the cell-cell correlation network, resulting in significant improvements in memory usage and run times.
+MetaNeighbor's voting algorithm relies on a cell-cell correlation network. This procedure becomes very memory-intensive and time consuming when it is applied to datasets that contain a large number of samples (>10K). We propose an approximative version of MetaNeighbor that does not explicitly compute the cell-cell correlation network, resulting in significant improvements in memory usage and run times.
 
-The low-memory/fast version is used by passing the flag `fast_version = TRUE` to either MetaNeighbor or MetaNeighborUS. Other parameters are unchanged: switching from the exact to the fast version is very simple. If your dataset is particularly large, we encourage you to use SingleCellExperiment objects, a subclass of SummarizedExperiment that is able to store data in sparse representations. We also strongly encourage you to use R with OpenBLAS or MKL (see installation tutorial [here](https://www.datacamp.com/community/tutorials/installing-R-windows-mac-ubuntu)). The low memory version relies almost exclusively on matrix operations, OpenBLAS/MKL will considerably speed it up and automatically use all cores on your machine.
+The low-memory (fast) version is used by passing the flag `fast_version = TRUE` to either MetaNeighbor or MetaNeighborUS. Other parameters are unchanged: switching from the exact to the fast version is very simple. If your dataset is particularly large, we encourage you to use SingleCellExperiment objects, a subclass of SummarizedExperiment that is able to store data in sparse representations. We also strongly encourage you to use R with OpenBLAS or MKL (see installation tutorial [here](https://www.datacamp.com/community/tutorials/installing-R-windows-mac-ubuntu)). The low memory version relies almost exclusively on matrix operations, OpenBLAS/MKL will considerably speed it up and automatically use all cores on your machine.
 
 ### Run previous example with low-memory version
 
@@ -361,7 +361,7 @@ data(mn_data)
 data(GOmouse)
 ```
 
-Rerun MetaNeighbor using the same command as above, with `fast_version = TRUE`:
+Re-run MetaNeighbor using the same command as above, with `fast_version = TRUE`:
 ```{r eval = TRUE,fig.width=4,fig.height=3, results='hide'}
 AUROC_scores = MetaNeighbor(dat = mn_data,
                             experiment_labels = as.numeric(factor(mn_data$study_id)),
@@ -371,7 +371,7 @@ AUROC_scores = MetaNeighbor(dat = mn_data,
                             fast_version = TRUE)
 ```
 
-Rerun unsupervised MetaNeighbor, with `fast_version = TRUE`:
+Re-run unsupervised MetaNeighbor, with `fast_version = TRUE`:
 ```{r eval = TRUE, fig.width = 7, fig.height = 6.5}
 var_genes = variableGenes(dat = mn_data, exp_labels = mn_data$study_id)
 celltype_NV = MetaNeighborUS(var_genes = var_genes,
@@ -401,9 +401,9 @@ Because of the approximations in the low memory version, the AUROCs do not match
 
 ### Apply low-memory version to large datasets
 
-The low memory version is particularly useful when the number of samples across datasets exceeds 10,000. In this section, we show a simple example with 5 datasets from the human pancreas.
+The low-memory version is particularly useful when the number of samples across datasets exceeds 10,000. In this section, we show a simple example with 5 datasets from the human pancreas.
 For simplicity, we use parsed datasets from the Hemberg lab (datasets available [here](https://hemberg-lab.github.io/scRNA.seq.datasets/human/pancreas/) in RDS format).
-Every dataset is represented as a SingleCellExperiment object, a subclass of SummarizedExperiment, particularly useful for storing large datasets, as it is able to handle sparse matrices or HDF5 matrices.
+Every dataset is represented as a SingleCellExperiment object, a subclass of SummarizedExperiment, particularly useful for storing large datasets as it is able to handle sparse matrices or HDF5 matrices.
 
 #### Example with 2 datasets: prepare the data
 
