--- a/vignettes/MetaNeighbor.Rmd
+++ b/vignettes/MetaNeighbor.Rmd
@@ -418,7 +418,7 @@ Every dataset is represented as a SingleCellExperiment object, a subclass of Sum
 Before we apply MetaNeighbor, we need to fuse the datasets as a unique SingleCellExperiment object.
 Start by downloading the Baron and Segerstolpe datasets, then run R and load the following libraries and data:
 
-```{r eval = TRUE, message = FALSE}
+```{r eval = FALSE, message = FALSE}
 library(SingleCellExperiment)
 library(Matrix)
 baron <- readRDS('baron-human.rds')
@@ -426,14 +426,14 @@ segerstolpe <- readRDS('segerstolpe.rds')
 ```
 
 In this analysis, we remove dead cells and doublets from the Segerstolpe dataset, and retain the genes that are common to the two datasets:
-```{r eval = TRUE}
+```{r eval = FALSE}
 common_genes <- intersect(rownames(baron), rownames(segerstolpe))
 baron <- baron[common_genes,]
 segerstolpe <- segerstolpe[common_genes, !(segerstolpe$cell_type1 %in% c('not applicable', 'co-expression'))]
 ```
 
 We create a SingleCellExperiment that is a fusion of the two datasets, then remove the single datasets:
-```{r eval = TRUE}
+```{r eval = FALSE}
 new_colData = data.frame(
   study_id = rep(c('baron', 'segerstolpe'), c(ncol(baron), ncol(segerstolpe))),
   cell_type = c(as.character(colData(baron)$cell_type1), colData(segerstolpe)$cell_type1)
@@ -451,7 +451,7 @@ The fused dataset has 10,739 samples across 18,936 genes.
 #### Example with 2 datasets: match labels
 
 Now that the dataset is ready, we can find variable genes and run the unsupervised version of MetaNeighbor:
-```{r eval = TRUE, fig.width=7,fig.height=6.5}
+```{r eval = FALSE, fig.width=7,fig.height=6.5}
 var_genes = variableGenes(dat = pancreas, exp_labels = pancreas$study_id)
 celltype_NV = MetaNeighborUS(var_genes = var_genes,
                              dat = pancreas,
@@ -475,12 +475,17 @@ gplots::heatmap.2(celltype_NV,
                   cexCol = 0.7)
 ```
 
+![MNUS_pancreas_2](./figures/MNUS_pancreas_2)
+<figure align="center">
+<figcaption>
+</figcaption>
+</figure>
 
 ### Apply MetaNeighbor to a collection of 5 datasets
 
 Using a procedure similar to the above example, we generated a SingleCellExperiment with all 5 pancreas datasets. We encourage you to fuse the datasets on your own, then load the resulting SingleCellExperiment object:
 
-```{r eval = TRUE}
+```{r eval = FALSE}
 all_pancreas <- readRDS('all_pancreas.rds')
 dim(all_pancreas)
 ```
@@ -490,7 +495,7 @@ Our fused dataset has 15,138 cells across 15,558 genes.
 #### Match labels
 
 Select variable genes, then run unsupervised MetaNeighbor to match labels across studies:
-```{r eval = TRUE, eval=TRUE,fig.width=7,fig.height=6.5}
+```{r eval = FALSE,fig.width=7,fig.height=6.5}
 var_genes = variableGenes(dat = all_pancreas, exp_labels = all_pancreas$Study_ID)
 celltype_NV = MetaNeighborUS(var_genes = var_genes,
                              dat = all_pancreas,
@@ -514,10 +519,17 @@ gplots::heatmap.2(celltype_NV,
                   cexCol = 0.7)
 ```
 
+![MNUS_pancreas_5](./figures/MNUS_pancreas_5)
+<figure align="center">
+<figcaption>
+</figcaption>
+</figure>
+
+
 #### Run MetaNeighbor on common labels
 
 Run MetaNeighbor for labels that span all datasets with 71 gene sets (GO slim terms containing 50 to 1,000 genes):
-```{r eval = TRUE,fig.width=4,fig.height=3, results='hide'}
+```{r eval = FALSE,fig.width=4,fig.height=3, results='hide'}
 data(GOhuman)
 small_pancreas = all_pancreas[, all_pancreas$Celltype %in% c('alpha', 'beta', 'delta')]
 celltype_matrix = model.matrix(~small_pancreas$Celltype - 1)
@@ -529,6 +541,13 @@ AUROC_scores = MetaNeighbor(dat = small_pancreas,
                             bplot = TRUE,
                             fast_version = TRUE)
 ```
+
+![MN_pancreas](./figures/MN_pancreas)
+<figure align="center">
+<figcaption>
+</figcaption>
+</figure>
+
 
 # FAQ and Contact Information
 
